--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "jest": "^29.7.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.3.3",
-    "react": "19.0.0",
-    "react-native": "0.79.1",
+    "react": "^18.2.0",
+    "react-native": "0.74.5",
     "react-native-builder-bob": "^0.30.2",
     "react-test-renderer": "^18.3.1",
     "release-it": "^17.10.0",
