--- a/package.json
+++ b/package.json
@@ -52,18 +52,18 @@
     "@release-it/conventional-changelog": "^8.0.1",
     "@testing-library/react-native": "^12.7.2",
     "@types/jest": "^29.5.13",
-    "@types/react": "^18.2.6",
-    "eslint": "^8.41.0",
+    "@types/react": "19.0.0",
+    "eslint": "^8.57.1",
     "eslint-config-expo": "^7.1.2",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.3.3",
-    "react": "^18.2.0",
-    "react-native": "0.74.5",
+    "react": "19.0.0",
+    "react-native": "0.79.1",
     "react-native-builder-bob": "^0.30.2",
-    "react-test-renderer": "^18.3.1",
+    "react-test-renderer": "19.0.0",
     "release-it": "^17.10.0",
     "rimraf": "^6.0.1",
     "typescript": "^5.6.3"
